[package]
name = "go-installer"
version = "0.2.0"
edition = "2021"

[dependencies]
ureq = { version = "2.9.6", features = ["json"] }
indicatif = "0.17"
sha2 = "0.10"
tar = "0.4"
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
