[package]
name = "go-installer"
version = "0.2.0"
edition = "2021"
description = "A quick Go installer written in Rust."
license = "MIT"
repository = "https://github.com/c0d3h01/go-installer"
homepage = "https://github.com/c0d3h01/go-installer"
documentation = "https://docs.rs/go-installer"

[dependencies]
ureq = { version = "2.9.6", features = ["json"] }
indicatif = "0.17"
sha2 = "0.10"
tar = "0.4"
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
